OR-866 mobile obliviot add info bar

--- a/content_builder/src/html/themes/obliviot/light/OrganizationPageComponent.html
+++ b/content_builder/src/html/themes/obliviot/light/OrganizationPageComponent.html
@@ -34,6 +34,14 @@
                     <div data-component-value="{this.props.rosterContent}" id="roster_component" style="padding-top:30px;">
                         
                     </div>
+                    <div data-component-props="style={this.props.obliviot_info_style}">
+                        <div class="classes.obliviot_light_info_container">
+                            <img class="classes.obliviot_light_info_image" data-component-props="src={this.props.info_image}" />    
+                            <div class="classes.obliviot_light_info_content_container">
+                                <span data-component-value="{this.props.info_name}">Blah</span>
+                            </div>
+                        </div>
+                    </div>
                     <div class="classes.obliviot_lightBlogContainer">
                         <div data-component-value="{this.props.blogContent}">Nav</div>
                     </div>
