--- a/html/landing/index.html
+++ b/html/landing/index.html
@@ -214,7 +214,7 @@
                         <div class="column">
                             <img id="landing_msp_image_2" class="classes.landing_msp_image" src="./images/team_2.png" />
                             <div id="landing_msp_quote_2" class="classes.landing_msp_quote">
-                                "Radiant used to run on SquareSpace. That was fine, but it wasn’t made for Esports. OriginGG is built for exactly what we need and you can’t beat the price."
+                                "Radiant used to run on Squarespace which was limited and did not meet all our requirements as an esports team. However, OriginGG was built for esports by those involved in the industry and it serves our purpose correctly with all the right tools we need."
                             </div>
                             <div id="landing_msp_author_2" class="classes.landing_msp_author">
                                 Nathan Edmonds - CEO, Radiant Esports
