added twitchh team input to admin portal with check

--- a/content_builder/src/html/themes/admin/OrganizationAdminProfileComponent.html
+++ b/content_builder/src/html/themes/admin/OrganizationAdminProfileComponent.html
@@ -69,6 +69,10 @@
                     <div class="ui fluid input">
                         <input data-component-props="value={this.props.twitch_value} onChange={(e)=>{this.props.handleChange('twitch_value', e);}}"  type="text" placeholder="Twitch link">
                     </div>
+                    <div class="classes.admin_social_box_divider"></div>
+                    <div class="ui fluid input">
+                        <input data-component-props="value={this.props.twitch_team_value} onChange={(e)=>{this.props.handleChange('twitch_team_value', e);}}"  type="text" placeholder="Twitch Team link">
+                    </div>
                 </div>
                 <div class="classes.admin_social_box_inner">
                     <div class="ui fluid input">
