changed query back to contactNumber temp .. added more default to blank orgs

--- a/content_builder/src/html/themes/individual/IndividualBasicInfoComponent.html
+++ b/content_builder/src/html/themes/individual/IndividualBasicInfoComponent.html
@@ -40,17 +40,9 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <i class="icon mail"></i> Email Address
+                                    <i class="icon mail"></i>Contact Email
                                     <div class="classes.individual_basic_text">
-                                        <p data-component-value="{this.props.email}" id="basic_email">johndoe@origin.gg</p>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <i class="icon phone"></i>Contact Number
-                                    <div class="classes.individual_basic_text">
-                                        <p data-component-value="{this.props.contactNumber}" id="basic_phone">4155555555</p>
+                                        <p data-component-value="{this.props.contactEmail}" id="basic_phone">4155555555</p>
                                     </div>
                                 </td>
                             </tr>
