--- a/content_builder/src/html/themes/individual/IndividualEditModalComponent.html
+++ b/content_builder/src/html/themes/individual/IndividualEditModalComponent.html
@@ -56,8 +56,8 @@
                         <input data-component-props="value={this.props.username} onChange={(e)=>{this.props.handleChange('username', e);}}" class="classes.modal_individual_edit_input" placeholder="Username" />
                         <div class="classes.individual_label">Twitter Handle</div>
                         <input data-component-props="value={this.props.twitterHandle} onChange={(e)=>{this.props.handleChange('twitterHandle', e);}}" class="classes.modal_individual_edit_input" placeholder="Twitter Handle not full URL" />
-                        <div class="classes.individual_label">Contact Number</div>
-                        <input data-component-props="value={this.props.contactNumber} onChange={(e)=>{this.props.handleChange('contactNumber', e);}}" class="classes.modal_individual_edit_input" placeholder="Contact Number" />
+                        <div class="classes.individual_label">Contact Email</div>
+                        <input data-component-props="value={this.props.contactEmail} onChange={(e)=>{this.props.handleChange('contactEmail', e);}}" class="classes.modal_individual_edit_input" placeholder="Contact Email" />
                         <div class="classes.individual_label">About</div>
                         <textarea data-component-props="value={this.props.about} onChange={(e)=>{this.props.handleChange('about', e);}}" class="classes.modal_individual_edit_about" rows="10" placeholder="About"></textarea>
                         <div class="classes.individual_label">Accomplishments</div>
