--- a/content_builder/src/html/themes/admin/OrganizationAdminNewThemeComponent.html
+++ b/content_builder/src/html/themes/admin/OrganizationAdminNewThemeComponent.html
@@ -48,6 +48,9 @@
                         <div class="classes.admin_theme_display_text">Felzek</div>
                     </div>
                 </div>
+                <div class="classes.admin_submit_box" data-component-props="onClick={this.props.handleSubmit}" >
+                    <div class="classes.admin_submit_button">Save</div>
+                </div>
                 <p>Change Jumbotron Images</p>
                 <div class="classes.jumbotron_container">
                     <img class="classes.jumbotron_image" data-component-props="src={this.props.image_src}" src="http://api.originbeta.net/defaultImages/section1-bg2.jpg" />
