OR-535 login button for individual page added

--- a/content_builder/src/html/themes/individual/IndividualPageComponent.html
+++ b/content_builder/src/html/themes/individual/IndividualPageComponent.html
@@ -31,6 +31,9 @@
                         <div data-component-props="onClick={this.props.handleEditClick} style={this.props.button_style}" id="edit_button" class="classes.individual_edit_button">
                             Edit
                         </div>
+                        <div data-component-props="onClick={this.props.handleLoginClick} style={this.props.login_button_style}" id="login_button" class="classes.individual_login_button">
+                            Login
+                        </div>
                     </div>
                     <div class="ui stackable two column grid">
                         <div class="six wide column">
