OR-891 stylized twitch data for individuals

--- a/content_builder/src/html/themes/individual/IndividualTwitchStatsComponent.html
+++ b/content_builder/src/html/themes/individual/IndividualTwitchStatsComponent.html
@@ -26,7 +26,7 @@
         <div data-component-name="IndividualTwitchStatsComponent" class="">
             <div class="classes.individual_social_box">
                     <h2 class="classes.individual_social_header" data-component-props="onClick={()=>{this.props.handle_redirect('youtube')}}">
-                            YouTube Stats
+                            Twitch Stats
                     </h2>
                     <div class="classes.individual_twitch_image_holder">
                         <img class="classes.individual_twitch_image" data-component-props="src={this.props.twitch_image}" />
