--- a/content_builder/src/html/themes/individual/hidden.html
+++ b/content_builder/src/html/themes/individual/hidden.html
@@ -44,3 +44,4 @@
                                     </div>
                                 </div>
                             </div>
+                            <button data-component-props="onClick={()=>{this.props.redirectAuth('youtube')}}" class='ui youtube button' role='button' style="margin-bottom:2em"><i aria-hidden='true' class='youtube icon'></i>Connect with Youtube</button>
