OR-924 add logo to nav of felzec theme

--- a/content_builder/src/html/themes/felzec/light/OrganizationNavComponent.html
+++ b/content_builder/src/html/themes/felzec/light/OrganizationNavComponent.html
@@ -23,8 +23,8 @@
    </head>
    <body>
         <div data-component-name="light_OrganizationNavComponent" class="classes.felzec_nav_constraint">
-            <div class="ui stackable two column grid" style="padding:0px">
-                <div class="six wide column" style="padding:0px">
+            <div class="ui stackable three column grid" style="padding:0px">
+                <div class="seven wide column" style="padding:0px">
                     <div class="classes.obliviot_light_social_menu_container">
                         <div class="classes.felzec_light_social_menu_item" data-component-value="{this.props.social_link1}">
                             <i class="fa fa-instagram"></i>
@@ -46,7 +46,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="ten wide column" style="padding:0px">
+                <div class="two wide column" style="padding:0px">
+                    <div class="classes.felzec_light_nav_logo_holder">
+                        <img class="classes.felzec_light_nav_logo" data-component-props="src={this.props.nav_logo}" />
+                    </div>
+                </div>
+                <div class="seven wide column" style="padding:0px">
                     <div class="classes.obliviot_nav_right">
                         <div class="classes.felzec_light_navicon_menu_item" data-component-value="{this.props.navicon}">
                             <i class="fa fa-navicon"></i>
