--- a/content_builder/src/html/themes/felzec/light/OrganizationSponserComponent.html
+++ b/content_builder/src/html/themes/felzec/light/OrganizationSponserComponent.html
@@ -24,7 +24,7 @@
    <body>
         <div data-component-name="light_OrganizationSponserComponent">
             <div data-component-props="style={this.props.felzec_sponsor_style}" class="classes.felzec_sponsor_box">
-                
+                <div class="classes.felzec_jumbotron_layer"></div>
                 <div class="classes.felzec_sponsor_container">
                     <div class="ui stackable four column grid" data-component-value="{this.props.sponsor_content}">
                         <div class="column">
