--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
     <script src="https://js.stripe.com/v3/"></script>
+    <script type="text/javascript"> window.paceOptions = { restartOnPushState: false, restartOnRequestAfter: false, eventLag: true, elements: false, ajax: true }; Pace.start(); </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pace/1.0.2/pace.js"></script>
-    <script type="text/javascript"> window.paceOptions = { ajax: true } </script>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/pace/1.0.2/themes/blue/pace-theme-loading-bar.min.css">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
