fixed issue with scroll buttons for titch in felzec theme OR-933

--- a/content_builder/src/html/themes/felzec/light/OrganizationMediaComponent.html
+++ b/content_builder/src/html/themes/felzec/light/OrganizationMediaComponent.html
@@ -35,7 +35,7 @@
                     <div class="classes.felzec_media_element_container" data-component-props="ref={c => {this.props.storeRef(c);}}" data-component-value="{this.props.youtube_videos}">youtube</div>
                 </div>
                 <div data-component-props="style={this.props.tw_style}">
-                    <div class="classes.felzec_media_element_container" data-component-props="ref={c => {this.props.storeRef(c);}}" data-component-value="{this.props.twitch_videos}">twitch</div>
+                    <div class="classes.felzec_media_element_container" data-component-props="ref={t => {this.props.storeRef2(t);}}" data-component-value="{this.props.twitch_videos}">twitch</div>
                 </div>
             </div>
             <div class="classes.felzec_dark_twitch_left_arrow" data-component-props="onClick={this.props.handleLeftScroll}"><i class="fa fa-arrow-left"></i></div>
