--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div class="parent_spinner">
+    <div id="origin_loader" class="parent_spinner">
       <div class="spinner">
         <div class="dot1"></div>
         <div class="dot2"></div>
