--- a/content_builder/src/html/themes/felzec/light/OrganizationNavComponent.html
+++ b/content_builder/src/html/themes/felzec/light/OrganizationNavComponent.html
@@ -61,11 +61,11 @@
             </div>
             <div data-component-props="style={this.props.felzec_menu_style} "class="classes.felzec_menu_container">
                 <div class="classes.obliviot_org_menu_light_container">
-                    <a href="#"><div id="menu_login" class="classes.org_menu_felzec_light_item" data-component-props="onClick={this.props.handleLoginClick}">Login</div></a>
-                    <a href="#"><div id="menu_news" data-component-props="style={this.props.store_style} onClick={this.props.handleStoreClick}" class="classes.org_menu_felzec_light_item">Store</div></a>
-                    <a href="#"><div id="sponsers_button" data-component-props="style={this.props.sponsers_style} onClick={this.props.handleSponsersClick}" class="classes.org_menu_felzec_light_item">Sponsors</div></a>
-                    <a href="#"><div id="news_button" data-component-props="style={this.props.news_style} onClick={this.props.handleViewBlogClick}" class="classes.org_menu_felzec_light_item">News</div></a>
-                    <a href="#"><div id="about_button" data-component-props="style={this.props.about_style} onClick={this.props.handleAboutClick}" class="classes.org_menu_felzec_light_item">About</div></a>
+                    <div id="menu_login" class="classes.org_menu_felzec_light_item" data-component-props="onClick={this.props.handleLoginClick}">Login</div></a>
+                    <div id="menu_news" data-component-props="style={this.props.store_style} onClick={this.props.handleStoreClick}" class="classes.org_menu_felzec_light_item">Store</div></a>
+                    <div id="sponsers_button" data-component-props="style={this.props.sponsers_style} onClick={this.props.handleSponsersClick}" class="classes.org_menu_felzec_light_item">Sponsors</div></a>
+                    <div id="news_button" data-component-props="style={this.props.news_style} onClick={this.props.handleViewBlogClick}" class="classes.org_menu_felzec_light_item">News</div></a>
+                    <div id="about_button" data-component-props="style={this.props.about_style} onClick={this.props.handleAboutClick}" class="classes.org_menu_felzec_light_item">About</div></a>
                     <a href="#home_cont"><div id="menu_home" data-component-props="style={this.props.home_style}"  class="classes.org_menu_felzec_light_item">Home</div></a>
                 </div>
             </div>
