--- a/content_builder/src/html/themes/felzec/light/OrganizationPageComponent.html
+++ b/content_builder/src/html/themes/felzec/light/OrganizationPageComponent.html
@@ -38,10 +38,10 @@
                       <div id="matches_container" data-component-value="{this.props.matchesContent}">MATCHES</div>
                       <div id="media_container" data-component-value="{this.props.mediaContent}">MEDIA</div>
                       <div data-component-value="{this.props.rosterContent}" id="roster_component" style="padding-top:0px;padding-bottom:0px;">
-                    </div>
-                    <footer class="classes.felzec_darkFooter">
+                      </div>
+                      <footer class="classes.felzec_darkFooter" data-component-props="style={this.props.felzec_footer_style}">
                         <div data-component-value="{this.props.footerContent}">Nav</div>
-                    </footer>
+                      </footer>
                 </div>
             </div>
         </div>
