clean up of console logs

--- a/content_builder/src/html/themes/admin/OrganizationAdminSponserComponentElement.html
+++ b/content_builder/src/html/themes/admin/OrganizationAdminSponserComponentElement.html
@@ -60,7 +60,7 @@
    </body>
    <script>
        $( document ).ready(function() {
-            console.log( "ready!" );
+            // console.log( "ready!" );
         });
 
         // $('.ui.sidebar').sidebar({
