--- a/content_builder/src/html/themes/enigma2/dark/OrganizationPageComponent.html
+++ b/content_builder/src/html/themes/enigma2/dark/OrganizationPageComponent.html
@@ -27,7 +27,7 @@
                   <img id="bg_img" class="classes.felzec_light_bg_img" src="../images/light_main.jpeg" alt=""/>
                   <div class="classes.obliviot_light_bg_filter" data-component-props="style={this.props.obliviot_page_style}"></div>
                   <div>
-                      <header class="classes.felzec_lightHeader">
+                      <header class="classes.enigma2_darkHeader">
                           <div data-component-value="{this.props.navContent}">Nav</div>
                       </header>
                       <div  id="sponsors" data-component-value="{this.props.topSponsorContent}">Nav</div>
