--- a/content_builder/src/html/themes/enigma2/dark/OrganizationMatchesComponent.html
+++ b/content_builder/src/html/themes/enigma2/dark/OrganizationMatchesComponent.html
@@ -22,20 +22,28 @@
       </script>  
    </head>
    <body>
-        <div data-component-name="dark_OrganizationMatchesComponent"  class="classes.felzec_matches_container">
-            <div class="classes.felzec_matches_container" data-component-props="style={this.props.bg_style}">
+        <div data-component-name="dark_OrganizationMatchesComponent"  class="classes.enigma2_matches_container">
+            <div class="classes.enigma2_matches_container" data-component-props="style={this.props.bg_style}">
             </div>
-            <div class="classes.felzec_matches_filter_container" data-component-props="style={this.props.filter_style}"></div>
-            <div class="classes.felzec_matches_inner_container">
-                <div class="classes.felzec_switch_container">
-                    <div class="classes.felzec_switch_upcoming_container" data-component-props="style={this.props.upcoming_style} onClick={this.props.handleUpcomingClick}">UPCOMING MATCHES</div>
-                    <div class="classes.felzec_switch_recent_container" data-component-props="style={this.props.recent_style} onClick={this.props.handleRecentClick}">LATEST RESULTS</div>
-                </div>
-                <div data-component-props="style={this.props.rm_style}">
-                    <div class="classes.felzec_match_element_container" data-component-value="{this.props.recent_matches}">matches</div>
-                </div>
-                <div data-component-props="style={this.props.fm_style}">
-                    <div class="classes.felzec_match_element_container" data-component-value="{this.props.future_matches}">matches</div>
+            <div class="classes.enigma2_matches_filter_container" data-component-props="style={this.props.filter_style}"></div>
+            <div class="classes.enigma2_matches_inner_container">
+                <div class="ui stackable three column grid" style="padding:0px">
+                    <div class="five wide column">
+                        <div class="classes.enigma2_switch_matches_title" data-component-props="style={this.props.switch_title_color}">MATCHES.</div>
+                        <div class="classes.enigma2_switch_matches_description">RECENT AND UPCOMING</div>
+                        <div class="classes.enigma2_switch_container">
+                            <div class="classes.enigma2_switch_upcoming_container" data-component-props="style={this.props.upcoming_style} onClick={this.props.handleUpcomingClick}">UPCOMING</div>
+                            <div class="classes.enigma2_switch_recent_container" data-component-props="style={this.props.recent_style} onClick={this.props.handleRecentClick}">RECENT</div>
+                        </div>
+                    </div>
+                    <div class="eleven wide column">
+                        <div data-component-props="style={this.props.rm_style}">
+                            <div class="classes.enigma2_match_element_container" data-component-value="{this.props.recent_matches}">matches</div>
+                        </div>
+                        <div data-component-props="style={this.props.fm_style}">
+                            <div class="classes.enigma2_match_element_container" data-component-value="{this.props.future_matches}">matches</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
